# cppmon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.txt  cppmon.cpp  formula.cpp  formula.h  formulatest.cpp  meson.build  meson_options.txt  mformula.h  mformulatest.cpp  monitor.cpp  monitor.h  monitor_driver.cpp  monitor_driver.h  monitortest.cpp  profile_debug  profile_release  setup_debug.sh  setup_release.sh  table.cpp  table.h  tablebench.cpp  tabletest.cpp  util.h
bench/: CMakeLists.txt  parse_benchmark.cpp  tablebench.cpp  uds_benchmark.cpp
ci/: Dockerfile  compile.sh  profile_ci
cmake/: lexy.cmake  uring.cmake
common/: CMakeLists.txt  event_data.cpp  event_data.h  util.h
doc/: README.md  further_optimizations.md  high_level_execution.md
examples/: unix_socket_interface.c
parsing/: CMakeLists.txt  driver.cpp  driver.h  formula.cpp  formula.h  meson.build  parser.yy  scanner.ll  traceparser.cpp  traceparser.h
src/: CMakeLists.txt  aggregation_impl.cpp  aggregation_impl.h  config.h.in  cppmon.cpp  database.cpp  database.h  file_monitor_driver.cpp  file_monitor_driver.h  formula.cpp  formula.h  monitor.cpp  monitor.h  monitor_driver.cpp  monitor_driver.h  monitor_types.h  shm_monitor_driver.cpp  shm_monitor_driver.h  since_impl.cpp  since_impl.h  since_until_impl.cpp  since_until_impl.h  table.cpp  table.h  temporal_aggregation_impl.cpp  temporal_aggregation_impl.h  uds_monitor_driver.cpp  uds_monitor_driver.h  until_impl.cpp  until_impl.h
src/abtesting/: CMakeLists.txt  abtesttool.cpp  dbgen.cpp  dbgen.h
src/common/: CMakeLists.txt  binary_buffer.h  buffers.h  event_data.cpp  event_data.h  hash_cache.h  util.cpp  util.h
src/dbgenerator/: CMakeLists.txt  dbgen.cpp
src/differential_testing/: CMakeLists.txt  dbgen.cpp  dbgen.h  differential_test.cpp  differential_test.h  differential_test_tool.cpp  fo_gen.cpp
src/parsing/: CMakeLists.txt  traceparser.cpp  traceparser.h
src/shm_monitor_interface/: CMakeLists.txt  c_event_types.h  cppmon_event_source.cpp  cppmon_event_source.h  cppmon_event_types_export.h  cppmon_shm_export.h  deserialization.h  serialization.cpp  serialization.h  shm_event_consumer.cpp  shm_event_consumer.h  shm_event_producer.cpp  shm_event_producer.h  shm_event_source.cpp  shm_event_source.h  shm_shared_state.cpp  shm_shared_state.h  socket_event_source.cpp
src/shm_monitor_interface/export/: cppmon_event_source_export.h
src/socket_interface/: CMakeLists.txt  c_event_types.h  deserialization.cpp  deserialization.h  serialization.cpp  serialization.h  serialization_types.h  socket_event_source.cpp  socket_event_source.h
src/socket_interface/export/: cppmon_event_source_export.h
tests/: CMakeLists.txt  binarybuffertest.cpp  formulatest.cpp  monitortest.cpp  tabletest.cpp
